Fix sound browser's table cell borders collapsing.

--- a/source/scss/soundBrowser/soundBrowser.scss
+++ b/source/scss/soundBrowser/soundBrowser.scss
@@ -4,6 +4,7 @@
 }
 
 .sounds table {
+	border-collapse: separate;
 	display: inline-block;
 }
 
